# berry-mcp

./: .env.example  .gitignore  README.md  README_DEPLOYMENT.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: deployment_guide.md  enterprise_deployment.md  oauth2-elicitation.md  transport_comparison.md
examples/: custom_tools.py  enhanced_server.py  pdf_service_setup.py  server_usage.py  simple_pdf_stdio.py  transport_examples.py
src/ai_agent/agents/: __init__.py  deepseek.py
src/ai_agent/cli/: __init__.py  app.py  commands.py  helpers.py
src/ai_agent/core/: base.py  registry.py  schema.py
src/ai_agent/tools/: __init__.py  calculator.py  loader.py  search.py
src/ai_agent/utils/: logging.py
src/berry_mcp/: __init__.py  __main__.py  server.py
src/berry_mcp/auth/: __init__.py  exceptions.py  middleware.py  oauth2.py
src/berry_mcp/core/: __init__.py  enhanced_transport.py  protocol.py  registry.py  server.py  transport.py
src/berry_mcp/elicitation/: __init__.py  handlers.py  manager.py  prompts.py  schemas.py
src/berry_mcp/tools/: __init__.py  decorators.py  example_tools.py  pdf_tools.py
src/berry_mcp/utils/: __init__.py  logging.py  validation.py
tests/: test_cli.py  test_decorators.py  test_integration.py  test_logging.py  test_oauth2_elicitation.py  test_protocol.py  test_registry.py  test_server.py  test_transport.py  test_validation.py
